fix(style): Low-contrast text

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -230,5 +230,5 @@ svg text::selection {
 /* gold */
 
 .gold {
-  color: #866b00;
+  color: #7d6400;
 }
